BMesh: Debug assertion fails when using solidify_faces tool to extrude partial faces of a mesh #113395

Closed
opened 2023-10-07 16:43:20 +02:00 by Peng Yan · 4 comments
Contributor

System Information
Operating system: Windows 10
Graphics card: GeForce RTX 2060

Blender Version
Broken: 4.1 Debug version
Worked: any Release version

Short description of error
When using editmode/Faces/Solidify faces tool to extrude partial faces of a mesh, debug assertion in EDBM_update() fails.

Exact steps for others to reproduce the error

  1. Create a uv sphere or a grid.
  2. Enter editmode, select any one face.
  3. Do Faces/Solidify faces, then Blender crashes.
  4. If you select all faces, the tool works correctly.
**System Information** Operating system: Windows 10 Graphics card: GeForce RTX 2060 **Blender Version** Broken: 4.1 Debug version Worked: any Release version **Short description of error** When using editmode/Faces/Solidify faces tool to extrude partial faces of a mesh, debug assertion in `EDBM_update()` fails. **Exact steps for others to reproduce the error** 1. Create a uv sphere or a grid. 2. Enter editmode, select any one face. 3. Do Faces/Solidify faces, then Blender crashes. 4. If you select all faces, the tool works correctly.
Peng Yan added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-07 16:43:20 +02:00
Author
Contributor

Although it may not be the intentional function of Solidify (I think it is mainly used to add thickness to non-closed surfaces), it works in Release versions. The cause is the debug check in EDBM_update()

ifdef DEBUG
  {
    LISTBASE_FOREACH (BMEditSelection *, ese, &em->bm->selected) {
      BLI_assert(BM_elem_flag_test(ese->ele, BM_ELEM_SELECT));
    }
  }
#endif

It seems that selection is not updated timely in edbm_solidify_exec().

Although it may not be the intentional function of Solidify (I think it is mainly used to add thickness to non-closed surfaces), it works in Release versions. The cause is the debug check in `EDBM_update()` ```C ifdef DEBUG { LISTBASE_FOREACH (BMEditSelection *, ese, &em->bm->selected) { BLI_assert(BM_elem_flag_test(ese->ele, BM_ELEM_SELECT)); } } #endif ``` It seems that selection is not updated timely in `edbm_solidify_exec()`.
Iliya Katushenock added the
Interest
Modeling
label 2023-10-07 16:54:11 +02:00
No description provided.
Iliya Katushenock added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
Interest
Modeling
labels 2023-10-07 17:02:26 +02:00
Author
Contributor

/* select the newly generated faces */ BMO_slot_buffer_hflag_enable(bm, bmop.slots_out, "geom.out", BM_FACE, BM_ELEM_SELECT, true); EDBM_selectmode_flush(em);

Adding a EDBM_selectmode_flush(em) easily fixes the problem. If it is ok, I will make a pull request.

`/* select the newly generated faces */ BMO_slot_buffer_hflag_enable(bm, bmop.slots_out, "geom.out", BM_FACE, BM_ELEM_SELECT, true); EDBM_selectmode_flush(em);` Adding a `EDBM_selectmode_flush(em)` easily fixes the problem. If it is ok, I will make a pull request.
Member

Still happens in current main.

Still happens in current main.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-15 03:00:55 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113395
No description provided.