Fix #113395: Assertion fails of solidify_faces tool when not selecting partial faces of a mesh