source/blender/editors/mesh/editmesh_tools.cc
@@ -4047,6 +4047,7 @@ static int edbm_solidify_exec(bContext *C, wmOperator *op)
 
     /* select the newly generated faces */
     BMO_slot_buffer_hflag_enable(bm, bmop.slots_out, "geom.out", BM_FACE, BM_ELEM_SELECT, true);
+    EDBM_selectmode_flush(em);
 
     if (!EDBM_op_finish(em, &bmop, op, true)) {
       continue;
